--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         <footer class="mt-16 text-center opacity-50 space-y-2">
             <p class="font-medium">Lira Link Smart Ecosystem &copy; 2026</p>
-            <p class="text-xs">تم التصميم ليتناسب مع معايير الدقة والجودة لشركة Lira Link</p>
+            <p class="text-xs">تم التصميم ليتناسب مع معايير الدقة والجودة لشركة MR.Q </p>
         </footer>
     </div>
 
@@ -315,3 +315,4 @@
     </script>
 </body>
 </html>
+
