--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <header class="flex flex-col md:flex-row justify-between items-start md:items-center gap-4 mb-10">
             <div>
                 <h1 class="text-3xl font-bold tracking-tight">
-                    <span class="text-blue-500">Lira Link</span> Smart Converter
+                    <span class="text-blue-500">MR.Q</span> Smart Converter
                 </h1>
                 <p class="opacity-60 text-sm mt-1">تطوير: <span class="font-bold">Anas Shameea</span> | الإصدار 2.0</p>
             </div>
@@ -172,7 +172,7 @@
         </section>
 
         <footer class="mt-16 text-center opacity-50 space-y-2">
-            <p class="font-medium">Lira Link Smart Ecosystem &copy; 2026</p>
+            <p class="font-medium">MR.Q Smart Ecosystem &copy; 2026</p>
             <p class="text-xs">تم التصميم ليتناسب مع معايير الدقة والجودة لشركة MR.Q </p>
         </footer>
     </div>
@@ -315,4 +315,5 @@
     </script>
 </body>
 </html>
+
 
